syntax = "proto3";

package storage;

service Storage {
  rpc Put(PutRequest) returns (PutResponse);

  rpc Get(GetRequest) returns (GetResponse);

  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

  message PutRequest {
      string obj_id =1;
      bytes value = 2;
      }

  message PutResponse {
    string status = 1;
      }

  message GetRequest {
    string obj_id = 1;
      }

  message GetResponse {
    string status = 1;
    bytes value = 2;
      }

  message DeleteRequest {
    string obj_id = 1;
      }

  message DeleteResponse {
    string status = 1;
      }
